--- a/knn.ipynb
+++ b/knn.ipynb
@@ -591,7 +591,7 @@
     "# data. You should be able to get above 28% accuracy on the test data.\n",
     "#best_k = 1\n",
     "accuracies_mean = np.array([np.mean(v) for k,v in sorted(k_to_accuracies.items())])\n",
-    "best_k = k_choices[np.argmax(accuracies_mean)]\n",
+    "best_k = k_choices[np.argmax(accuracies_mean)]   # or by looking at the plot, best_k = 10\n",
     "print (\"best_k \", best_k)\n",
     "                   \n",
     "classifier = KNearestNeighbor()\n",
