--- a/features.ipynb
+++ b/features.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -547,36 +547,36 @@
      "output_type": "stream",
      "text": [
       "iteration 0 / 3000: loss 2.302587\n",
-      "iteration 100 / 3000: loss 1.444113\n",
-      "iteration 200 / 3000: loss 1.379338\n",
-      "iteration 300 / 3000: loss 1.300341\n",
-      "iteration 400 / 3000: loss 1.313630\n",
-      "iteration 500 / 3000: loss 1.333220\n",
-      "iteration 600 / 3000: loss 1.308058\n",
-      "iteration 700 / 3000: loss 1.230400\n",
-      "iteration 800 / 3000: loss 1.292452\n",
-      "iteration 900 / 3000: loss 1.338087\n",
-      "iteration 1000 / 3000: loss 1.268252\n",
-      "iteration 1100 / 3000: loss 1.267247\n",
-      "iteration 1200 / 3000: loss 1.287315\n",
-      "iteration 1300 / 3000: loss 1.293021\n",
-      "iteration 1400 / 3000: loss 1.280410\n",
-      "iteration 1500 / 3000: loss 1.278041\n",
-      "iteration 1600 / 3000: loss 1.232436\n",
-      "iteration 1700 / 3000: loss 1.271734\n",
-      "iteration 1800 / 3000: loss 1.160833\n",
-      "iteration 1900 / 3000: loss 1.221739\n",
-      "iteration 2000 / 3000: loss 1.228567\n",
-      "iteration 2100 / 3000: loss 1.278389\n",
-      "iteration 2200 / 3000: loss 1.234184\n",
-      "iteration 2300 / 3000: loss 1.254228\n",
-      "iteration 2400 / 3000: loss 1.241940\n",
-      "iteration 2500 / 3000: loss 1.248079\n",
-      "iteration 2600 / 3000: loss 1.251545\n",
-      "iteration 2700 / 3000: loss 1.237656\n",
-      "iteration 2800 / 3000: loss 1.178666\n",
-      "iteration 2900 / 3000: loss 1.296715\n",
-      "best_result :  0.604\n"
+      "iteration 100 / 3000: loss 1.505226\n",
+      "iteration 200 / 3000: loss 1.406946\n",
+      "iteration 300 / 3000: loss 1.332965\n",
+      "iteration 400 / 3000: loss 1.322864\n",
+      "iteration 500 / 3000: loss 1.305462\n",
+      "iteration 600 / 3000: loss 1.291773\n",
+      "iteration 700 / 3000: loss 1.273621\n",
+      "iteration 800 / 3000: loss 1.372372\n",
+      "iteration 900 / 3000: loss 1.268376\n",
+      "iteration 1000 / 3000: loss 1.263539\n",
+      "iteration 1100 / 3000: loss 1.307134\n",
+      "iteration 1200 / 3000: loss 1.297916\n",
+      "iteration 1300 / 3000: loss 1.298839\n",
+      "iteration 1400 / 3000: loss 1.264054\n",
+      "iteration 1500 / 3000: loss 1.306487\n",
+      "iteration 1600 / 3000: loss 1.284443\n",
+      "iteration 1700 / 3000: loss 1.246885\n",
+      "iteration 1800 / 3000: loss 1.300824\n",
+      "iteration 1900 / 3000: loss 1.213325\n",
+      "iteration 2000 / 3000: loss 1.252172\n",
+      "iteration 2100 / 3000: loss 1.269765\n",
+      "iteration 2200 / 3000: loss 1.213568\n",
+      "iteration 2300 / 3000: loss 1.216602\n",
+      "iteration 2400 / 3000: loss 1.208867\n",
+      "iteration 2500 / 3000: loss 1.216268\n",
+      "iteration 2600 / 3000: loss 1.203716\n",
+      "iteration 2700 / 3000: loss 1.159663\n",
+      "iteration 2800 / 3000: loss 1.224833\n",
+      "iteration 2900 / 3000: loss 1.258489\n",
+      "best_result :  0.611\n"
      ]
     }
    ],
@@ -652,14 +652,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.598\n"
+     "ename": "NameError",
+     "evalue": "name 'best_net' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-7870a22b072f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# get more than 55% accuracy.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtest_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbest_net\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test_feats\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mtest_acc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'best_net' is not defined"
      ]
     }
    ],
@@ -685,7 +689,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import sys\n",
@@ -696,16 +702,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('X_train x1Experi: ', (49000, 32, 32, 3), (32, 32, 3))\n",
-      "('img: ', (32, 32))\n",
-      "('desc: ', (960,))\n"
+      "('X_train x1Experi: ', (49000, 32, 32, 3), (32, 32, 3))\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "global name 'Image' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-55c54124c30b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"X_train x1Experi: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx1Experi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mdesc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgistDescriptor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx1Experi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"desc: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdesc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-5-55c54124c30b>\u001b[0m in \u001b[0;36mgistDescriptor\u001b[0;34m(im)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;34m-\u001b[0m \u001b[0mim\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mH\u001b[0m \u001b[0mx\u001b[0m \u001b[0mW\u001b[0m \u001b[0mx\u001b[0m \u001b[0mC\u001b[0m \u001b[0marray\u001b[0m \u001b[0mof\u001b[0m \u001b[0mpixel\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0man\u001b[0m \u001b[0mRGB\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \"\"\"\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfromarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'RGB'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0;31m#print (\"img: \", img.size)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: global name 'Image' is not defined"
      ]
     }
    ],
@@ -737,15 +753,63 @@
     "desc = gistDescriptor(x1Experi)\n",
     "print (\"desc: \", desc.shape)\n",
     "\n",
+    "feature_fns = [hog_feature, gistDescriptor]\n",
+    "X_train_feats_new = extract_features(X_train, feature_fns, verbose=True)\n",
     "\n",
-    "def extractFeatures(imagesArrays):\n",
-    "    '''\n",
-    "    get features from all images\n",
-    "    '''\n",
-    "    features = np.zeros(imagesArrays.shape[0], )\n",
-    "    for x in imagesArrays:\n",
-    "        \n",
+    "print (\"X_train_feats_new: \", X_train_feats_new.shape)\n",
+    "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from asgn1.classifiers.neural_net import TwoLayerNet\n",
+    "\n",
+    "input_dim = X_train_feats_new.shape[1]\n",
+    "num_classes = 10\n",
+    "\n",
+    "best_net = None\n",
+    "\n",
+    "batchSizeLst = xrange(200, 801, 200)\n",
+    "learningRateLst = [1e-2, 1e-1, 0.1, 0.5, 1]\n",
+    "hiddenSizeLst = xrange(100, 501, 100)\n",
+    "regularizationLst = [0.05,0.005, 0.001]\n",
+    "\n",
+    "best_acc = 0\n",
+    "best_batchSize = 0\n",
+    "best_learningRate = 0\n",
+    "best_hiddenSize = 0\n",
+    "best_reg = 0\n",
+    "for bs in batchSizeLst:\n",
+    "    for lr in learningRateLst:\n",
+    "        for hs in hiddenSizeLst:\n",
+    "            for reg in regularizationLst:\n",
+    "                net = TwoLayerNet(input_dim, hs, num_classes)\n",
+    "\n",
+    "                # Train the network\n",
+    "                stats = net.train(X_train_feats, y_train, X_val_feats, y_val,\n",
+    "                            num_iters=2000, batch_size=bs,\n",
+    "                            learning_rate=lr, learning_rate_decay=0.95,\n",
+    "                            reg=reg, verbose=True)\n",
+    "\n",
+    "                # Predict on the validation set\n",
+    "                val_acc = (net.predict(X_val_feats) == y_val).mean()\n",
+    "                print 'batch_size = %d, lr = %f, hidden size = %f, Valid_accuracy: %f, reg: %f' %(bs, lr, hs,val_acc, reg)\n",
+    "                if val_acc > best_acc:\n",
+    "                    best_acc = val_acc\n",
+    "                    best_batchSize = bs\n",
+    "                    best_learningRate = lr\n",
+    "                    best_hiddenSize = hs\n",
+    "                    best_reg = reg\n",
+    "                    best_net = net\n",
+    "                \n",
+    "print 'best_result : ', best_acc, best_batchSize, best_learningRate, best_hiddenSize, best_reg\n"
    ]
   },
   {
